--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,32 @@
 body {
-    background-color: rgb(0, 0, 34);
+    background: url(fondo.jpg);
+    background-size: 100%;
     text-align: center;
-}
-p {
-    color: white;
 }
 
 h1{
-    font-size: 5rem;
+    font-size: 2.3rem;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 2.5rem 30.2rem;
+    width: 20rem;
+    text-align: center;
+    margin-bottom: 2.5rem;
+    color: white;
+    background:rgb(35, 73, 60);
+    border-radius: 4px;
+    
+    /*font-size: 5rem;
     color: white;
     font-family: 'Times New Roman', Times, serif;
-    margin-bottom: 5.rem;
+    margin-bottom: 5.rem;*/
+}
+.caja1{
+    /*align: center;*/
+    background-color: #bef4f8af;
+    width: 30rem;
+    height: 17rem;
+    margin: 0px auto;
+    border-radius: 4px;
 }
 .boton{
     font-size: 0.8rem;
@@ -26,4 +42,17 @@ input{
     padding: 1rem;
     width: 8rem;
     text-align: center;
+}
+p {
+    color: white;
+    font-size: 1.2rem;
+    font-family:monospace;
+}
+.caja2{
+    background-color: rgba(35, 73, 60, 0.884);
+    width: 30rem;
+    height: 5rem;
+    margin: 0px auto;
+    border-radius: 4px;
+    border: white 5px;
 }
