--- a/style.css
+++ b/style.css
@@ -3,51 +3,62 @@ body {
     background-size: 100%;
     text-align: center;
 }
-
+/*.root{
+    background-color: #027179;
+    width: 30rem;
+    height: 17rem;
+    margin: 0 auto;
+    border-radius: 4px;
+    
+}*/
 h1{
     font-size: 2.3rem;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 2.5rem 30.2rem;
-    width: 20rem;
-    text-align: center;
-    margin-bottom: 2.5rem;
+    margin: 0 auto;
     color: white;
-    background:rgb(35, 73, 60);
+    background-color: #027179;
+    width: 40rem;
+    height: 3rem;
     border-radius: 4px;
-    
-}
+    padding: 2rem;
+}  
 .caja1{
     background-color: #bef4f8af;
     width: 30rem;
     height: 17rem;
-    margin: 0px auto;
+    margin:2rem auto;
     border-radius: 4px;
+    padding: 2rem;
 }
 .boton{
     font-size: 0.8rem;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding: 1rem 0;
     width: 10rem;
     text-align: center;
     margin-bottom: 1rem;
-    color: white;
-    background:rgb(35, 73, 60);
+    color: rgb(253, 230, 230);
+    background:#01565c;
     border-radius: 4px;
+    border-color: white;
 }
 input{
     padding: 1rem;
     width: 8rem;
     text-align: center;
+    margin: 0.5rem auto;
 }
 p {
-    color: white;
+    color: rgb(243, 233, 233);
     font-size: 1.2rem;
     font-family:monospace;
+    margin: 0 auto;
 }
 .caja2{
-    background-color: rgba(35, 73, 60, 0.884);
+    background-color: #027179e7;
     width: 30rem;
-    height: 5rem;
+    height: 2rem;
     margin: 0px auto;
     border-radius: 4px;
-    border: white 5px;
+    padding: 1rem;
 }
